module(
    name = "rules_create_dmg",
    version = "1.0.0",
)

bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "rules_nodejs", version = "6.7.4")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version_from_nvmrc = "//:.nvmrc")
use_repo(node, "nodejs_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(pnpm_version = "10.33.2")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    lifecycle_hooks = {
        "macos-alias": ["install"],
        "fs-xattr": ["install"],
    },
    lifecycle_hooks_use_default_shell_env = {
        "macos-alias": "true",
        "fs-xattr": "true",
    },
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")
